Clean up a bit